# IIT-Bhubaneswar-Student-Survey-Streamlit

./: IIT_Bhubaneswar_109_Student_Responses.csv  IIT_Bhubaneswar_109_Student_Responses.xlsx  README.md  main.py  pyproject.toml  skills-lock.json  utils.py
pages/: raw.py
